--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,8 @@ jobs:
         jlpm run eslint:check
         python -m pip install .
 
-        jupyter server extension list 2>&1 | grep -ie "nbwhisper.*OK"
+        jupyter server extension list
+        #jupyter server extension list 2>&1 | grep -ie "nbwhisper.*OK"
 
         jupyter labextension list 2>&1 | grep -ie "nbwhisper.*OK"
         python -m jupyterlab.browser_check
