--- a/.github/workflows/check-release.yml
+++ b/.github/workflows/check-release.yml
@@ -49,6 +49,9 @@ jobs:
       - name: Install Dependencies
         run: |
           pip install .
+      - name: Install Hatch
+        run: |
+          pip install hatch
       - name: Check Release
         uses: jupyter-server/jupyter_releaser/.github/actions/check-release@v1
         with:
