--- a/.github/workflows/check-release.yml
+++ b/.github/workflows/check-release.yml
@@ -16,19 +16,23 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
       - name: Install Python
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
           architecture: 'x64'
+
       - name: Install node
         uses: actions/setup-node@v3
         with:
           node-version: 18
+
       - name: Get pip cache dir
         id: pip-cache
         run: |
           echo "::set-output name=dir::$(pip cache dir)"
+
       - name: Cache pip
         uses: actions/cache@v1
         with:
@@ -36,6 +40,7 @@ jobs:
           key: ${{ runner.os }}-pip-${{ hashFiles('package.json') }}
           restore-keys: |
             ${{ runner.os }}-pip-
+
       - name: Cache checked links
         uses: actions/cache@v2
         with:
@@ -43,13 +48,25 @@ jobs:
           key: ${{ runner.os }}-linkcheck-${{ hashFiles('**/.md') }}-md-links
           restore-keys: |
             ${{ runner.os }}-linkcheck-
+
       - name: Upgrade packaging dependencies
         run: |
-          pip install --upgrade pip setuptools wheel jupyter-packaging~=0.10 --user
+          pip install --upgrade pip setuptools wheel jupyter-packaging~=0.10
+
+      - name: Install Hatch
+        run: |
+          pip install hatch
+
       - name: Install Dependencies
         run: |
           pip install .
+
+      - name: Check Hatch Installation
+        run: |
+          hatch --version
+
       - name: Check Release
-        uses: jupyter-server/jupyter_releaser/.github/actions/check-release@v2
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          jupyter-releaser check-release --token ${{ secrets.GITHUB_TOKEN }}
