--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,7 +43,7 @@ jobs:
           yarn-
 
     - name: Install dependencies
-      run: python -m pip install -U 'jupyterlab>=4.0.0,<5' 'aiohttp~=3.9.3'
+      run: python -m pip install -U 'jupyterlab>=4.0.0,<5'
     - name: Build the extension
       run: |
         set -eux
