--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,9 +51,9 @@ jobs:
         jlpm run eslint:check
         python -m pip install .
 
-        jupyter server extension list 2>&1 | grep -ie "nbwhisper.*OK"
+        jupyter server extension list
 
-        jupyter labextension list 2>&1 | grep -ie "nbwhisper.*OK"
+        jupyter labextension list
         python -m jupyterlab.browser_check
 
         jlpm install
