--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,7 +43,7 @@ jobs:
           yarn-
 
     - name: Install dependencies
-      run: python -m pip install -U 'jupyterlab>=4.0.0,<5'
+      run: python -m pip install -U 'jupyterlab>=4.0.0,<5' 'aiohttp~=3.9.3'
     - name: Build the extension
       run: |
         set -eux
@@ -51,9 +51,9 @@ jobs:
         jlpm run eslint:check
         python -m pip install .
 
-        jupyter server extension list
+        jupyter server extension list 2>&1 | grep -ie "nbwhisper.*OK"
 
-        jupyter labextension list
+        jupyter labextension list 2>&1 | grep -ie "nbwhisper.*OK"
         python -m jupyterlab.browser_check
 
         jlpm install
